# QRest

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: TEndpoint.h
lib/src/: TEndpoint.cpp
